--- a/index.html
+++ b/index.html
@@ -6,9 +6,12 @@
     <title>Google</title>
 </head>
 <body>
-    <div class="logo1">
-        <img src="img/google.jpg" alt="Google">
-    </div>
+   <div class="content">
+    <img src="img/google.jpg" alt="google">
+   </div> 
+    <!--
+
+    -->
     <center>
         <table border="0" width="90%">
             <tbody>
